// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbilityProfileConverter should convert ability characteristics 1`] = `
Object {
  "description": "Extra Ability",
  "name": "Super Ability",
  "typeName": "Ability",
}
`;

exports[`AbilityProfileConverter should have default values 1`] = `
Object {
  "description": "-",
  "name": "Super Ability",
  "typeName": "Ability",
}
`;
